argo-infra-apps/argo-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-hello-route
  namespace: argocd
  labels:
    gateway: my-gateway
    external-dns: "yes"
  annotations:
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
      sectionName: https-listener
  hostnames:
    - "argocd.internal.sharpley.xyz"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GRPCRoute
metadata:
  name: argocd-grpc-route
  namespace: argocd
  labels:
    gateway: my-gateway
  annotations:
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
      sectionName: https-listener
  hostnames:
    - "argocd.internal.sharpley.xyz"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
