argo-infra-apps/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
  namespace: default
  labels:
    gateway: my-gateway
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-listener
      hostname: "*.internal.sharpley.xyz"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: nginx-le-cert
            namespace: default
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: http-listener
      hostname: "*.internal.sharpley.xyz"
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-redirect-route
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
      sectionName: http-listener
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: "https"
            port: 443
            statusCode: 301
